--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build and deploy dist files to S3
+name: Build and deploy
 
 on:
   push:
@@ -7,11 +7,12 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     environment: development
     
     steps:
+    - name: Check out code
     - uses: actions/checkout@v3
 
     - name: Use Node.js 18.x
@@ -24,7 +25,21 @@ jobs:
         npm install
         npm run build
         
-    - name: Deploy
+    - uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: dist
+  
+  deploy:
+    runs-on: ubuntu-latest
+    environment: development
+    
+    steps:
+    - uses: actions/download-artifact@v2
+      with:
+        name: my-artifact
+        
+    - name: Sync with S3
       uses: jakejarvis/s3-sync-action@master
       with:
         args: --acl public-read --follow-symlinks --delete
