Fix build.yml bug

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     
     steps:
     - name: Check out code
-    - uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
     - name: Use Node.js 18.x
       uses: actions/setup-node@v3
@@ -24,3 +24,28 @@ jobs:
       run: |
         npm install
         npm run build
+        
+    - uses: actions/upload-artifact@v2
+      with:
+        name: artifact
+        path: dist
+  
+  deploy:
+    runs-on: ubuntu-latest
+    environment: development
+    
+    steps:
+    - uses: actions/download-artifact@v2
+      with:
+        name: my-artifact
+        
+    - name: Sync with S3
+      uses: jakejarvis/s3-sync-action@master
+      with:
+        args: --acl public-read --follow-symlinks --delete
+      env:
+        AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        AWS_REGION: 'ap-southeast-1'   # optional: defaults to us-east-1
+        SOURCE_DIR: 'dist'      # optional: defaults to entire repository
