--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,12 +32,13 @@ jobs:
   
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     environment: development
     
     steps:
     - uses: actions/download-artifact@v2
       with:
-        name: my-artifact
+        name: artifact
         
     - name: Sync with S3
       uses: jakejarvis/s3-sync-action@master
